Fix excessive p spacing in blockquotes

--- a/less/core.less
+++ b/less/core.less
@@ -46,6 +46,11 @@ body {
 			}
 		}
 
+		blockquote {
+			p + p {
+				margin: -2em 0 0.5em;
+			}
+		}
 		article {
 			margin-bottom: 2em !important;
 
